dataset1235/2025-2/805158916/users/674524038/executions/71079933_211162095.log
== RUN (2025-08-13 15:25:24)
-- CODE: 
numero = int(input("Numero qualquer: "))
print("Resultado: ",numero + 5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 14:46:24)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 14:45:58)
-- CODE: 
python3 main.py print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    python3 main.py print("Universidade Federal do Amazonas")
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    python3 main.py print("Universidade Federal do Amazonas")
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 14:46:39)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:06:13)
-- CODE: 
var = jfds
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = jfds
          ^^^^
NameError: name 'jfds' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = jfds
          ^^^^
NameError: name 'jfds' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:24:20)
-- CODE: 
numero = int(input("Numero qualquer"))
print(numero + 5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:04:42)
-- CODE: 
string(dfsdgsg)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    string(dfsdgsg)
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    string(dfsdgsg)
    ^^^^^^
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:24:39)
-- CODE: 
numero = int(input("Numero qualquer: "))
print(numero + 5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:08:42)
-- CODE: 
print(x,y,z)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(x,y,z)
          ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(x,y,z)
          ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:04:18)
-- CODE: 
print(jgfdgdfg)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(jgfdgdfg)
          ^^^^^^^^
NameError: name 'jgfdgdfg' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(jgfdgdfg)
          ^^^^^^^^
NameError: name 'jgfdgdfg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:04:42)
-- CODE: 
string(dfsdgsg)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    string(dfsdgsg)
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    string(dfsdgsg)
    ^^^^^^
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:07:13)
-- CODE: 
print("dasdll"/fsdfjgfd/"")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("dasdll"/fsdfjgfd/"")
                   ^^^^^^^^
NameError: name 'fsdfjgfd' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("dasdll"/fsdfjgfd/"")
                   ^^^^^^^^
NameError: name 'fsdfjgfd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:25:14)
-- CODE: 
numero = int(input("Numero qualquer: "))
print("Resultado: " numero + 5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 2
    print("Resultado: " numero + 5)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 2
    print("Resultado: " numero + 5)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:21:56)
-- CODE: 
nome = input("kdws")
print("QWE",nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
kdwsQWE xx
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
kdwsQWE xx
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:07:25)
-- CODE: 
print("dasdll"/fsdfjgfd"/")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("dasdll"/fsdfjgfd"/")
          ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("dasdll"/fsdfjgfd"/")
          ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:04:17)
-- CODE: 
print(jgfdgdfg)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(jgfdgdfg)
          ^^^^^^^^
NameError: name 'jgfdgdfg' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(jgfdgdfg)
          ^^^^^^^^
NameError: name 'jgfdgdfg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:09:05)
-- CODE: 
print("x,y,z")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
x,y,z
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
x,y,z
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:11:51)
-- CODE: 
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:11:00)
-- CODE: 
numero = int(input("Numero qualquer: "))
print("Resultado: ",numero + 5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:06:12)
-- CODE: 
var = jfds
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = jfds
          ^^^^
NameError: name 'jfds' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = jfds
          ^^^^
NameError: name 'jfds' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:24:45)
-- CODE: 
numero = int(input("Numero qualquer: "))
print(numero + 5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("Numero qualquer: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:07:22)
-- CODE: 
print("dasdll"/fsdfjgfd"/")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("dasdll"/fsdfjgfd"/")
          ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("dasdll"/fsdfjgfd"/")
          ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:07:24)
-- CODE: 
print("dasdll"/fsdfjgfd"/")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("dasdll"/fsdfjgfd"/")
          ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("dasdll"/fsdfjgfd"/")
          ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:07:14)
-- CODE: 
print("dasdll"/fsdfjgfd/"")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("dasdll"/fsdfjgfd/"")
                   ^^^^^^^^
NameError: name 'fsdfjgfd' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("dasdll"/fsdfjgfd/"")
                   ^^^^^^^^
NameError: name 'fsdfjgfd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:11:50)
-- CODE: 
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:08:42)
-- CODE: 
print(x,y,z)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(x,y,z)
          ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(x,y,z)
          ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
